--- a/metro/src/index.html
+++ b/metro/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru" prefix="og://ogp.me/ns#">
   <head>
-    <title>[*pagetitle*]</title>
+    <title>Онлайн продолжается в метро с Tele2</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="format-detection" content="telephone=no" />
@@ -57,23 +57,48 @@
     <link rel="stylesheet" href="./css/main.min.css" media="all" />
 
     <!-- OG -->
-    <!--
-        <meta name="description" content="[*pagedescription*]">
-        <meta property="og:title" content="[*pagetitle*]"/>
-        <meta property="og:description" content="[*pagedescription*]"/>
-        <meta property="og:url" content="https://[*URL*].tele2.ru"/>
-        <meta property="og:locale" content="ru_RU"/>
 
-        <meta property="og:image" content="https://[*URL*].tele2.ru/src/img/preview-og.jpg"/>
-        <meta property="og:image:secure_url" content="https://[*URL*].tele2.ru/src/img/preview-og.jpg"/>
-        <meta property="og:image:width" content="968"/><meta property="og:image:height" content="504"/>
+    <meta
+      name="description"
+      content="Оставайтесь на связи на всех станциях и перегонах московского метро с Tele2: отличное покрытие и онлайн везде, где вам нужно"
+    />
+    <meta property="og:title" content="Онлайн продолжается в метро с Tele2" />
+    <meta
+      property="og:description"
+      content="Оставайтесь на связи на всех станциях и перегонах московского метро с Tele2: отличное покрытие и онлайн везде, где вам нужно"
+    />
+    <meta property="og:url" content="https://metro.tele2.ru" />
+    <meta property="og:locale" content="ru_RU" />
 
-        <meta name="twitter:title" content="[*pagetitle*]"/>
-        <meta name="twitter:description" content="[*pagedescription*]"/>
-        <meta name="twitter:card" content="summary_large_image"/>
-        <meta name="twitter:image:src" content="https://[*URL*].tele2.ru/src/img/preview-og.jpg"/>
-        <link rel="image_src" href="https://[*URL*].tele2.ru/src/img/preview-og.jpg"/>
-        <meta name="twitter:image" content="https://[*URL*].tele2.ru/src/img/preview-og.jpg"/>-->
+    <meta
+      property="og:image"
+      content="https://metro.tele2.ru/src/img/preview-og.jpg"
+    />
+    <meta
+      property="og:image:secure_url"
+      content="https://metro.tele2.ru/src/img/preview-og.jpg"
+    />
+    <meta property="og:image:width" content="968" />
+    <meta property="og:image:height" content="504" />
+
+    <meta name="twitter:title" content="Онлайн продолжается в метро с Tele2" />
+    <meta
+      name="twitter:description"
+      content="Оставайтесь на связи на всех станциях и перегонах московского метро с Tele2: отличное покрытие и онлайн везде, где вам нужно"
+    />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:image:src"
+      content="https://metro.tele2.ru/src/img/preview-og.jpg"
+    />
+    <link
+      rel="image_src"
+      href="https://metro.tele2.ru/src/img/preview-og.jpg"
+    />
+    <meta
+      name="twitter:image"
+      content="https://metro.tele2.ru/src/img/preview-og.jpg"
+    />
 
     <meta
       name="apple-mobile-web-app-status-bar-style"
@@ -270,14 +295,14 @@
               </div>
               <div class="price__buttons">
                 <a
-                  href="https://tele2.ru/shop/checkout?simplePurchase=true&tariff=everywhere-online"
+                  href="https://msk.tele2.ru/shop/checkout?simplePurchase=true&tariff=everywhere-online"
                   class="btn btn-primary js-gtm-event"
                   data-event="conv_buy"
                   target="_blank"
                   >Купить</a
                 >
                 <a
-                  href="https://tele2.ru/connectTariff"
+                  href="https://msk.tele2.ru/connectTariff"
                   class="btn js-gtm-event"
                   data-event="conv_mnp"
                   target="_blank"
@@ -419,7 +444,7 @@
               </p>
               <a
                 class="btn btn-primary js-gtm-event"
-                href="https://tele2.ru/shop/checkout?simplePurchase=true&tariff=everywhere-online"
+                href="https://msk.tele2.ru/shop/checkout?simplePurchase=true&tariff=everywhere-online"
                 data-event="conv_connect"
                 target="_blank"
                 >Подключиться</a
@@ -471,7 +496,12 @@
           <div class="box-pic">
             <div class="pic-layer">
               <picture class="picture">
-                <img src="./img/page/Promo MiXX.svg" alt="" />
+                <img
+                  src="./img/page/PromoMiXX.svg"
+                  class="wow fadeIn"
+                  data-wow-delay="1s"
+                  alt=""
+                />
               </picture>
             </div>
           </div>
