--- a/metro/src/index.html
+++ b/metro/src/index.html
@@ -398,122 +398,124 @@
           </div>
         </div>
       </section>
-      <section
-        class="section section-benefits dark-bg section_hidden"
-        data-wow-delay="2s"
-      >
-        <div class="section-layer section-layer_benefits">
-          <div class="box-content">
-            <h2 class="box-content__title">
-              Связь&nbsp;&mdash; это еще не&nbsp;все
-            </h2>
-            <div class="box-content__benefits benefits">
-              <p class="subtitle">
-                Нам всегда есть, что предложить нашим абонентам&nbsp;&mdash;
-                и&nbsp;чем удивить&nbsp;их:
-              </p>
-              <ul class="benefits__list mb-2">
-                <li class="benefits__item wow fadeIn" data-wow-delay=".1s">
-                  <img src="./img/icons/fire-icon.svg" alt="Иконка" />
-                  <span>остатки не&nbsp;сгорают</span>
-                </li>
-                <li class="benefits__item wow fadeIn" data-wow-delay=".3s">
-                  <img src="./img/icons/gift-internet.svg" alt="Иконка" />
-                  <span>можно делиться ГБ</span>
-                </li>
-                <li class="benefits__item wow fadeIn" data-wow-delay=".5s">
-                  <img src="./img/icons/internet.svg" alt="Иконка" />
-                  <span>поездки по&nbsp;России без доплат</span>
-                </li>
-                <li class="benefits__item wow fadeIn" data-wow-delay=".7s">
-                  <img src="./img/icons/help-1.svg" alt="Иконка" />
-                  <span>SOS-пакет включен</span>
-                </li>
-                <li class="benefits__item wow fadeIn" data-wow-delay=".9s">
-                  <img src="./img/icons/market.svg" alt="Иконка" />
-                  <span>Маркет Tele2</span>
-                </li>
-                <li class="benefits__item wow fadeIn" data-wow-delay="1.1s">
-                  <img src="./img/icons/protection-icon.svg" alt="Иконка" />
-                  <span>защита от&nbsp;нежелательных подписок</span>
-                </li>
-              </ul>
-              <p class="subtitle">
-                Подключайтесь, чтобы пользоваться этими и&nbsp;многими другими
-                сервисами с&nbsp;беспрерывной связью в&nbsp;метро от&nbsp;Tele2.
-              </p>
-              <a
-                class="btn btn-primary js-gtm-event"
-                href="https://msk.tele2.ru/shop/checkout?simplePurchase=true&tariff=everywhere-online"
-                data-event="conv_connect"
-                target="_blank"
-                >Подключиться</a
-              >
+      <div class="dark-bg">
+        <section
+          class="section section-benefits dark-bg section_hidden"
+          data-wow-delay="2s"
+        >
+          <div class="section-layer section-layer_benefits">
+            <div class="box-content">
+              <h2 class="box-content__title">
+                Связь&nbsp;&mdash; это еще не&nbsp;все
+              </h2>
+              <div class="box-content__benefits benefits">
+                <p class="subtitle">
+                  Нам всегда есть, что предложить нашим абонентам&nbsp;&mdash;
+                  и&nbsp;чем удивить&nbsp;их:
+                </p>
+                <ul class="benefits__list mb-2">
+                  <li class="benefits__item wow fadeIn" data-wow-delay=".1s">
+                    <img src="./img/icons/fire-icon.svg" alt="Иконка" />
+                    <span>остатки не&nbsp;сгорают</span>
+                  </li>
+                  <li class="benefits__item wow fadeIn" data-wow-delay=".3s">
+                    <img src="./img/icons/gift-internet.svg" alt="Иконка" />
+                    <span>можно делиться ГБ</span>
+                  </li>
+                  <li class="benefits__item wow fadeIn" data-wow-delay=".5s">
+                    <img src="./img/icons/internet.svg" alt="Иконка" />
+                    <span>поездки по&nbsp;России без доплат</span>
+                  </li>
+                  <li class="benefits__item wow fadeIn" data-wow-delay=".7s">
+                    <img src="./img/icons/help-1.svg" alt="Иконка" />
+                    <span>SOS-пакет включен</span>
+                  </li>
+                  <li class="benefits__item wow fadeIn" data-wow-delay=".9s">
+                    <img src="./img/icons/market.svg" alt="Иконка" />
+                    <span>Маркет Tele2</span>
+                  </li>
+                  <li class="benefits__item wow fadeIn" data-wow-delay="1.1s">
+                    <img src="./img/icons/protection-icon.svg" alt="Иконка" />
+                    <span>защита от&nbsp;нежелательных подписок</span>
+                  </li>
+                </ul>
+                <p class="subtitle">
+                  Подключайтесь, чтобы пользоваться этими и&nbsp;многими другими
+                  сервисами с&nbsp;беспрерывной связью в&nbsp;метро
+                  от&nbsp;Tele2.
+                </p>
+                <a
+                  class="btn btn-primary js-gtm-event"
+                  href="https://msk.tele2.ru/shop/checkout?simplePurchase=true&tariff=everywhere-online"
+                  data-event="conv_connect"
+                  target="_blank"
+                  >Подключиться</a
+                >
+              </div>
             </div>
           </div>
-        </div>
-      </section>
-      <section class="section section-mixx dark-bg">
-        <div class="section-layer">
-          <div class="box-content wow fadeIn" data-wow-delay=".6s">
-            <h2 class="box-content__title">Уже&nbsp;с&nbsp;нами?</h2>
-            <div class="box-content__text">
-              <p>
-                Прокачайте свой тариф&nbsp;&mdash; 50&nbsp;ГБ, музыка, кино
-                и&nbsp;другие сервисы с&nbsp;подпиской MiXX&nbsp;S бесплатно
-                до&nbsp;конца годa
-              </p>
+        </section>
+        <section class="section section-mixx dark-bg">
+          <div class="section-layer">
+            <div class="box-content wow fadeIn" data-wow-delay=".6s">
+              <h2 class="box-content__title">Уже&nbsp;с&nbsp;нами?</h2>
+              <div class="box-content__text">
+                <p>
+                  Прокачайте свой тариф&nbsp;&mdash; 50&nbsp;ГБ, музыка, кино
+                  и&nbsp;другие сервисы с&nbsp;подпиской MiXX&nbsp;S бесплатно
+                  до&nbsp;конца годa
+                </p>
 
-              <div class="tooltip-block">
-                <button
-                  class="js-gtm-event popup__link tooltip__icon tooltip-icon"
-                  data-event="info"
-                >
-                  i
-                </button>
-                <div class="tooltip">
-                  <div class="tooltip__text">
-                    Предложение доступно только для абонентов Москвы и
-                    Московской области без действующих подписок MiXX и скидок на
-                    них.
-                  </div>
-                  <div class="tooltip__close-icon tooltip-icon">
-                    <span class="close"></span>
+                <div class="tooltip-block">
+                  <button
+                    class="js-gtm-event popup__link tooltip__icon tooltip-icon"
+                    data-event="info"
+                  >
+                    i
+                  </button>
+                  <div class="tooltip">
+                    <div class="tooltip__text">
+                      Предложение доступно только для абонентов Москвы и
+                      Московской области без действующих подписок MiXX и скидок
+                      на них.
+                    </div>
+                    <div class="tooltip__close-icon tooltip-icon">
+                      <span class="close"></span>
+                    </div>
                   </div>
                 </div>
               </div>
+              <a
+                href="https://tele2.ru/tariffs"
+                class="btn js-gtm-event box-content__link"
+                data-event-category="conversions"
+                data-event="button_join"
+                data-section="section-join"
+                target="_blank"
+                >Подробнее</a
+              >
             </div>
-            <a
-              href="https://tele2.ru/tariffs"
-              class="btn js-gtm-event box-content__link"
-              data-event-category="conversions"
-              data-event="button_join"
-              data-section="section-join"
-              target="_blank"
-              >Подробнее</a
-            >
-          </div>
-          <div class="box-pic">
-            <div class="pic-layer">
-              <picture class="picture">
-                <img
-                  src="./img/page/PromoMiXX.svg"
-                  class="wow fadeIn"
-                  data-wow-delay="1s"
-                  alt=""
-                />
-              </picture>
+            <div class="box-pic">
+              <div class="pic-layer">
+                <picture class="picture">
+                  <img
+                    src="./img/page/PromoMiXX.svg"
+                    class="wow fadeIn"
+                    data-wow-delay="1s"
+                    alt=""
+                  />
+                </picture>
+              </div>
             </div>
           </div>
-        </div>
-      </section>
+        </section>
 
-      <section class="section section--footer">
-        <div class="section-layer">
-          <div class="box-content">
-            <div class="copyrights">18+ &copy; Tele2 Россия, 2023.</div>
-            <div class="rules">
-              <!-- <a
+        <section class="section section--footer">
+          <div class="section-layer">
+            <div class="box-content">
+              <div class="copyrights">18+ &copy; Tele2 Россия, 2023.</div>
+              <div class="rules">
+                <!-- <a
                 href="https://tele2.ru/minutes-management"
                 target="_blank"
                 class="text-link js-gtm-event"
@@ -521,10 +523,11 @@
                 data-section="section-footer"
                 >Подробное&nbsp;описание</a
               > -->
+              </div>
             </div>
           </div>
-        </div>
-      </section>
+        </section>
+      </div>
     </div>
 
     <script type="module" src="./js/main.js?v1" defer></script>
