combo.tele2.ru/fix link address

--- a/metro/src/index.html
+++ b/metro/src/index.html
@@ -328,7 +328,9 @@
                 data-event="conv_partner-ozon"
                 target="_blank"
               >
-                <img src="./img/icons/icons8-ozon.svg" alt="" />
+                <div class="mp-item__image">
+                  <img src="./img/icons/icon_square.svg" alt="" />
+                </div>
               </a>
               <div class="mp-item__name">OZON</div>
             </li>
@@ -339,7 +341,9 @@
                 target="_blank"
                 data-event="conv_partner-wild"
               >
-                <img src="./img/icons/icons_WB.svg" alt="" />
+                <div class="mp-item__image">
+                  <img src="./img/icons/icons_WB.svg" alt="" />
+                </div>
               </a>
               <div class="mp-item__name">Wildberries</div>
             </li>
@@ -350,7 +354,9 @@
                 target="_blank"
                 data-event="conv_partner-market"
               >
-                <img src="./img/icons/icons_Ya.svg" alt="" />
+                <div class="mp-item__image">
+                  <img src="./img/icons/icons_Ya.svg" alt="" />
+                </div>
               </a>
               <div class="mp-item__name">Я.Маркет</div>
             </li>
@@ -369,7 +375,9 @@
                 <span class="mp-item__name">OZON</span>
                 <span class="mp-item__link link">Перейти</span>
               </span>
-              <img src="./img/icons/icons8-ozon.svg" alt="" />
+              <div class="mp-item__image">
+                <img src="./img/icons/icon_square.svg" alt="" />
+              </div>
             </a>
             <a
               class="marketplaces-list__item mp-item js-gtm-event"
@@ -381,7 +389,9 @@
                 <span class="mp-item__name">Wildberries</span>
                 <span class="mp-item__link link">Перейти</span>
               </span>
-              <img src="./img/icons/icons_WB.svg" alt="" />
+              <div class="mp-item__image">
+                <img src="./img/icons/icons_WB.svg" alt="" />
+              </div>
             </a>
             <a
               class="marketplaces-list__item mp-item js-gtm-event"
@@ -393,7 +403,9 @@
                 <span class="mp-item__name">Я.Маркет</span>
                 <span class="mp-item__link link">Перейти</span>
               </span>
-              <img src="./img/icons/icons_Ya.svg" alt="" />
+              <div class="mp-item__image">
+                <img src="./img/icons/icons_Ya.svg" alt="" />
+              </div>
             </a>
           </div>
         </div>
