--- a/metro/src/index.html
+++ b/metro/src/index.html
@@ -358,7 +358,7 @@
                   <img src="./img/icons/icons_Ya.svg" alt="" />
                 </div>
               </a>
-              <div class="mp-item__name">Я.Маркет</div>
+              <div class="mp-item__name">Яндекс&nbsp;Маркет</div>
             </li>
           </ul>
 
@@ -400,7 +400,7 @@
               target="_blank"
             >
               <span class="mp-item__info">
-                <span class="mp-item__name">Я.Маркет</span>
+                <span class="mp-item__name">Яндекс&nbsp;Маркет</span>
                 <span class="mp-item__link link">Перейти</span>
               </span>
               <div class="mp-item__image">
