metro.tele2.ru/fix wb

--- a/metro/src/index.html
+++ b/metro/src/index.html
@@ -216,11 +216,11 @@
           <div class="box-pic">
             <div class="pic-layer pic-layer_train">
               <picture class="picture">
-                <img src="./img/page/train.png" alt="" />
+                <img src="./img/page/train.png" alt="" class="wow fadeInLeft" />
                 <div class="ellipse"></div>
               </picture>
             </div>
-            <div class="pic-layer pic-layer_schema">
+            <div class="pic-layer pic-layer_schema wow fadeInUp">
               <picture class="picture">
                 <img src="./img/page/schema.svg" alt="" />
               </picture>
