metro.tele2.ru/fix links

--- a/metro/src/index.html
+++ b/metro/src/index.html
@@ -323,7 +323,7 @@
           >
             <li class="marketplaces-list__item mp-item">
               <a
-                href=""
+                href="https://www.ozon.ru/product/sim-karta-tele2-sim-karta-tele2-moskva-moskovskaya-oblast-1138044514/?oos_search=false&sh=1ZPckiUiEQ"
                 class="mp-item__link js-gtm-event"
                 data-event="conv_partner-ozon"
                 target="_blank"
@@ -336,7 +336,7 @@
             </li>
             <li class="marketplaces-list__item mp-item">
               <a
-                href=""
+                href="https://www.wildberries.ru/catalog/172068306/detail.aspx?targetUrl=GP"
                 class="mp-item__link js-gtm-event"
                 target="_blank"
                 data-event="conv_partner-wild"
@@ -349,7 +349,7 @@
             </li>
             <li class="marketplaces-list__item mp-item">
               <a
-                href=""
+                href="https://market.yandex.ru/product--sim-karta-tele2-dlia-moskovskoi-oblasti-balans-650-rublei/1918921161?sku=102311970771&uniqueId=712630&cpa=1"
                 class="mp-item__link js-gtm-event"
                 target="_blank"
                 data-event="conv_partner-market"
@@ -367,7 +367,7 @@
           >
             <a
               class="marketplaces-list__item mp-item js-gtm-event"
-              href=""
+              href="https://www.ozon.ru/product/sim-karta-tele2-sim-karta-tele2-moskva-moskovskaya-oblast-1138044514/?oos_search=false&sh=1ZPckiUiEQ"
               data-event="conv_partner-ozon"
               target="_blank"
             >
@@ -381,7 +381,7 @@
             </a>
             <a
               class="marketplaces-list__item mp-item js-gtm-event"
-              href=""
+              href="https://www.wildberries.ru/catalog/172068306/detail.aspx?targetUrl=GP"
               data-event="conv_partner-wild"
               target="_blank"
             >
@@ -395,7 +395,7 @@
             </a>
             <a
               class="marketplaces-list__item mp-item js-gtm-event"
-              href=""
+              href="https://market.yandex.ru/product--sim-karta-tele2-dlia-moskovskoi-oblasti-balans-650-rublei/1918921161?sku=102311970771&uniqueId=712630&cpa=1"
               data-event="conv_partner-market"
               target="_blank"
             >
