metro.tele2.ru/fix links

--- a/metro/src/index.html
+++ b/metro/src/index.html
@@ -209,7 +209,8 @@
               </p>
               <p>
                 А&nbsp;если вы&nbsp;еще не&nbsp;с&nbsp;нами&nbsp;&mdash;
-                подключайтесь!
+                подключайтесь к&nbsp;тарифу &laquo;Везде онлайн&raquo;
+                в&nbsp;котором есть все для безостановочного онлайна.
               </p>
             </div>
           </div>
